--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container-fluid">
+  <header>
+  </header>
+  <nav class="index-container">  
+      <a routerLink="/"><img src="../assets/images/ironhack-france.png" alt=""></a>
+      <h2>CINEMA</h2>      
+  </nav>
+  <router-outlet></router-outlet>  
+</div>
